--- a/2024_04_25_Homework/2024_04_25_Homework.vcxproj
+++ b/2024_04_25_Homework/2024_04_25_Homework.vcxproj
@@ -128,7 +128,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="2024_04_25_Homework.cpp" />
-    <ClCompile Include="Q1_Q2.cpp" />
+    <ClCompile Include="Q1_Q2Template.cpp" />
+    <ClCompile Include="Q5Vector.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
