--- a/2024_04_25_Homework/2024_04_25_Homework.vcxproj.filters
+++ b/2024_04_25_Homework/2024_04_25_Homework.vcxproj.filters
@@ -24,5 +24,11 @@
     <ClCompile Include="Q5Vector.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Q6Bit_Operations.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Q7Flag.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
